# c-major-transposition

./: README.md  setup.cfg  setup.py
.github/workflows/: publishing.yml  testing.yml
docs/: Contributing.md  Developer_documentation.md  User_documentation.md  Workflows.md
docs/pdoc/: cmajortransposition.html  index.html  search.json
docs/pdoc/cmajortransposition/: notetools.html  sheetmusic.html
src/cmajortransposition/: __init__.py  notes.py  notetools.py  sheetmusic.py
tests/: __init__.py  test_notes.py  test_notetools.py  test_sheetmusic.py
