[metadata]
name = cmajortransposition
version = 0.0.2
author = Soline B.
description = Tools to help in the transposition of sheet musics to C major
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soline-b/c-major-transposition
project_urls =
  Bug Tracker = https://github.com/soline-b/c-major-transposition/issues
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
  packages = find:
  python_requires = >=3.8

[options.packages.find]
where = src
